2019-1/231/users/4225/executions/1611_820.log
== TEST (2019-03-28 18:58:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_R50 = valor // 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:59:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:59:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.199569
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:06:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.155316
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:06:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.152203
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:06:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:06:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.196329
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
